Update tests for newer java versions